This the first commit

--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
         <h2 class="heading">Choose your feelings!</h2>
         <div class="slider">
             <div>
-                <img src="年間研究images/calmこびと.jpg" alt="" class="slide-img">
+                <img src="images/calmkobito.jpg" alt="" class="slide-img">
                 <div class="slide-box">
                     <h3 class="slide-title">心を静めたい</h3>
                     <a onclick="transision(0)" class="slider-0">click!</a>
                 </div>
             </div>
             <div>
-                <img src="年間研究images/wakuwakuこびと.jpg" alt="" class="slide-img">
+                <img src="images/wakuwaku kobito.jpg" alt="" class="slide-img">
                 <div class="slide-box">
                     <h3 class="slide-title">ワクワクしたい</h3>
                     <a onclick="transision(1)" class="slider-1">click!</a>
@@ -65,7 +65,7 @@
                 </div>
             </div>
             <div>
-                <img src="年間研究images/sadこびと.jpg" alt="" class="slide-img">
+                <img src="images/sadkobito.jpg" alt="" class="slide-img">
                 <div class="slide-box">
                     <h3 class="slide-title">慰められたい</h3>
                     <a onclick="transision(2)" class="slider-2">click!</a>
@@ -73,7 +73,7 @@
                 </div>
             </div>
             <div>
-                <img src="年間研究images/happyこびと.jpg" alt="" class="slide-img">
+                <img src="images/happykobito.jpg" alt="" class="slide-img">
                 <div class="slide-box">
                     <h3 class="slide-title">元気を出したい</h3>
                     <a onclick="transision(3)" class="slider-3">click!</a>
