modified pathes to js files

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 
     <link rel="stylesheet" href="slick.css">
     <link rel="stylesheet" href="slick-theme.css">
-    <script src="/js/slick.min.js"></script>
+    <script src="js/slick.min.js"></script>
 
     <link rel="stylesheet" href="style.css">
     <script src="js/jquery.bgswitcher.js"></script>
-    <script src="/js/main.js"></script>
+    <script src="js/main.js"></script>
 
 </head>
 
