--- a/result.html
+++ b/result.html
@@ -17,7 +17,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/jquery.bgswitcher.js"></script>
-    <script src="/js/result.js"></script>
+    <script src="js/result.js"></script>
 </head>
 
 <body>
